[package]
name = "discord-markdown"
version = "0.1.1"
authors = ["aravk <aravkasi@gmail.com>"]
edition = "2018"
description = "Parse discord-flavored markdown"
repository = "https://github.com/cubetastic33/discord-markdown"
license = "GPL-3.0-only"
keywords = ["discord", "markdown", "parser"]
categories = ["parser-implementations"]

[dependencies]
nom = { version = "6.2.1", features = ["regexp"] }
lazy_static = "1.4.0"
html-escape = "0.2.9"
